methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:52: error: not found: value doite
  doite()
  ^